--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "nodejs_server_boilerplate",
+  "name": "sequential_jobs_server",
   "version": "1.0.0",
-  "description": "This repository contains the source code for a comprehensive NodeJS Boilerplate code with Typescript",
-  "main": "dist/server.js",
+  "description": "This repository contains the source code for sequential jobs server side code",
   "scripts": {
     "dev": "tsc --watch",
     "start": "nodemon dist/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "ReactMode",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.0",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
-    "typescript": "^5.5.3",
-    "validator": "^13.12.0"
+    "socket.io": "^4.8.1",
+    "typescript": "5.7.3",
+    "uuid": "^11.0.5",
+    "validator": "^13.12.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -31,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.0"
   }
 }
