started working on the job-seeker's end

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
 PORT = 8080
-ACCESS_TOKEN_SECRET = 
-REFRESH_TOKEN_SECRET = 
+ACCESS_TOKEN_SECRET =
+REFRESH_TOKEN_SECRET =
 DB_USER = 
 DB_PASS = 
-DB_NAME = 
+DB_NAME =
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY =
+CLOUDINARY_API_SECRET = 
+NODEMAILER_EMAIL =
+NODEMAILER_REPLYTO_EMAIL =
+NODEMAILER_PASSWORD =
 
 
 # require('crypto').randomBytes(16).toString('hex')
