--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.1.4",
     "socket.io": "^4.8.1",
     "typescript": "5.7.3",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "zod": "^3.24.2"
   },
@@ -35,6 +36,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.17",
-    "@types/validator": "^13.12.0"
+    "@types/validator": "^13.12.0",
+    "node-cache": "^5.1.2"
   }
 }
