--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mjml": "^4.15.3",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
     "socket.io": "^4.8.1",
@@ -38,6 +39,7 @@
     "@types/mjml": "^4.7.4",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.0",
     "node-cache": "^5.1.2"
