--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.0",
+    "moment": "^2.30.1",
     "node-cache": "^5.1.2"
   }
 }
