--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
+    "stripe": "^18.1.0",
     "typescript": "5.7.3",
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
