--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^4.5.1",
     "socket.io": "^4.8.1",
     "stripe": "^18.1.0",
     "typescript": "5.7.3",
