--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/validator": "^13.12.0",
     "moment": "^2.30.1",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "xlsx": "^0.18.5"
   }
 }
