--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         key: ${{ secrets.SSH_PRI_KEY }}
         port: 22
         script: |
+          run: echo -e "\033[1mCD into the /var/www/node-seqjob/\033[0m"
           echo "CD into the /var/www/node-seqjob/"
           cd /var/www/node-seqjob/
 
