--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "tsc --watch",
     "start": "nodemon dist/server.js",
-    "build": "npm install && tsc"
+    "build": "npm install && tsc",
+    "email": "email dev"
   },
   "keywords": [],
   "author": "ReactMode",
   "license": "ISC",
   "dependencies": {
+    "@react-email/components": "0.3.3",
     "bcryptjs": "^3.0.0",
     "bullmq": "^5.56.7",
     "cloudinary": "^2.5.1",
@@ -22,13 +24,14 @@
     "helmet": "^8.0.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
-    "mjml": "^4.15.3",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "resend": "^4.5.1",
     "socket.io": "^4.8.1",
     "stripe": "^18.1.0",
@@ -38,12 +41,12 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@react-email/preview-server": "^4.2.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/mjml": "^4.7.4",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
@@ -52,6 +55,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/validator": "^13.12.0",
     "moment": "^2.30.1",
+    "react-email": "4.2.5",
     "xlsx": "^0.18.5"
   }
 }
