--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,34 @@
 PORT = 8080
-ACCESS_TOKEN_SECRET =
-REFRESH_TOKEN_SECRET =
-DB_USER = 
-DB_PASS = 
-DB_NAME =
-CLOUDINARY_CLOUD_NAME = 
-CLOUDINARY_API_KEY =
-CLOUDINARY_API_SECRET = 
-NODEMAILER_EMAIL =
-NODEMAILER_REPLYTO_EMAIL =
-NODEMAILER_PASSWORD =
+ACCESS_TOKEN_SECRET = ''
+REFRESH_TOKEN_SECRET = ''
+GOOGLE_VERIFICATION_TOKEN= ''
+GOOGLE_CALLBACK_URL= ''
+EMAIL_VERIFICATION_TOKEN = ''
+DB_USER = ''
+DB_PASS = ''
+DB_NAME = ''
+CLOUDINARY_CLOUD_NAME = ''
+CLOUDINARY_API_KEY = ''
+CLOUDINARY_API_SECRET = ''
+RESEND_API_KEY = ''
+SENDER_EMAIL = ''
+REPLYTO_EMAIL = ''
+CLIENT_URL=''
+GOOGLE_CLIENT_ID = ''
+GOOGLE_CLIENT_SECRET = ''
+NODE_ENV = ''
+STRIPE_PUBLISHABLE_KEY= ''
+STRIPE_SECRET_KEY= ''
+STRIPE_WEBHOOK_SECRET= ''
+SEQUENTIAL_FREEMIUM = ''
+SEQUENTIAL_STANDARD = ''
+SEQUENTIAL_PRO = ''
+SEQUENTIAL_SUPER_PRO = ''
+REDIS_HOST = ''
+REDIS_PASS = ''
+REDIS_USERNAME = ''
+REDIS_PORT = ''
+
 
 
 # require('crypto').randomBytes(16).toString('hex')
